# fido2ble-to-uhid

./: .gitignore  CMD.py  CTAPBLEDevice.py  CTAPBLEHIDConnection.py  CTAPHIDDevice.py  LICENSE  PACKAGING.md  README.md  TODO-packaging.md  fido2ble_to_uhid.py  prepare-release  pyproject.toml  setup.py
.github/workflows/: check-labels.yml
debian/: .gitignore  changelog  control  copyright  fido2ble-to-uhid.service  fido2ble.default  fido2ble.install  fido2ble.lintian-overrides  fido2ble.service  pone.sources  rules
fido2ble/: CTAPBLEDevice.py  CTAPHIDDevice.py  fido2ble.py
fido2ble_to_uhid/: CMD.py  CTAPBLEDevice.py  CTAPHIDDevice.py  fido2ble_to_uhid.py
