[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fido2ble-to-uhid"
authors = [
  {name= "Jó Ágila Bitsch", email = "jo.bitsch@gmail.com"},
  {name= "Sigurhjörtur Snorrason", email = "sis@ponebiometrics.com"},
]
version = "0.0.1"
license = {text="MIT"}

[project.scripts]
fido2ble-to-uhid = "fido2ble_to_uhid.fido2ble_to_uhid:main"
